; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-bin-debugger/tools/mrdb/extr_mrdb.c_mrb_debug_break_hook.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-bin-debugger/tools/mrdb/extr_mrdb.c_mrb_debug_break_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i64 (i32*, i32*)* }

@DBGST_CONTINUE = common dso_local global i64 0, align 8
@DBGST_RESTART = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_6__*)* @mrb_debug_break_hook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_debug_break_hook(i32* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %4, align 8
  %8 = load i64, i64* @DBGST_CONTINUE, align 8
  store i64 %8, i64* %6, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32* @mrdb_state_get(i32* %9)
  store i32* %10, i32** %7, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @print_info_stopped(i32* %11, i32* %12)
  br label %14

14:                                               ; preds = %2, %34
  %15 = load i32*, i32** %3, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call %struct.TYPE_7__* @get_and_parse_command(i32* %15, i32* %16)
  store %struct.TYPE_7__* %17, %struct.TYPE_7__** %5, align 8
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %19 = call i32 @mrb_assert(%struct.TYPE_7__* %18)
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 0
  %22 = load i64 (i32*, i32*)*, i64 (i32*, i32*)** %21, align 8
  %23 = load i32*, i32** %3, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = call i64 %22(i32* %23, i32* %24)
  store i64 %25, i64* %6, align 8
  %26 = load i64, i64* %6, align 8
  %27 = load i64, i64* @DBGST_CONTINUE, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %33, label %29

29:                                               ; preds = %14
  %30 = load i64, i64* %6, align 8
  %31 = load i64, i64* @DBGST_RESTART, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %29, %14
  br label %35

34:                                               ; preds = %29
  br label %14

35:                                               ; preds = %33
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  ret i32 %38
}

declare dso_local i32* @mrdb_state_get(i32*) #1

declare dso_local i32 @print_info_stopped(i32*, i32*) #1

declare dso_local %struct.TYPE_7__* @get_and_parse_command(i32*, i32*) #1

declare dso_local i32 @mrb_assert(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
